digital clock added across all screens

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Vælg venligst et alternativ
 JSelectionCalendar.SorryThisNameAlreadyExists=Desværre, dette navn eksisterer allerede
 JSelectionCalendar.YouhaveToSpecifyAName=Du skal specificere et navn
 
-CurrentDateButton.April=April
-CurrentDateButton.August=August
-CurrentDateButton.December=December
-CurrentDateButton.February=Februar
-CurrentDateButton.January=Januar
-CurrentDateButton.July=Juli
-CurrentDateButton.June=Juni
-CurrentDateButton.March=Marts
-CurrentDateButton.May=Maj
-CurrentDateButton.November=November
-CurrentDateButton.October=Oktober
-CurrentDateButton.September=September
+CurrentDateAndDigitalClock.April=April
+CurrentDateAndDigitalClock.August=August
+CurrentDateAndDigitalClock.December=December
+CurrentDateAndDigitalClock.February=Februar
+CurrentDateAndDigitalClock.January=Januar
+CurrentDateAndDigitalClock.July=Juli
+CurrentDateAndDigitalClock.June=Juni
+CurrentDateAndDigitalClock.March=Marts
+CurrentDateAndDigitalClock.May=Maj
+CurrentDateAndDigitalClock.November=November
+CurrentDateAndDigitalClock.October=Oktober
+CurrentDateAndDigitalClock.September=September
