--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Bitte wahlen Sie eine Alternativ
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, dieser Name ist bereits vorhanden
 JSelectionCalendar.YouhaveToSpecifyAName=Sie mussen einen Namen angeben
 
-CurrentDateButton.April=April
-CurrentDateButton.August=August
-CurrentDateButton.December=Dezember
-CurrentDateButton.February=Februar
-CurrentDateButton.January=Januar
-CurrentDateButton.July=Juli
-CurrentDateButton.June=Juni
-CurrentDateButton.March=Marz
-CurrentDateButton.May=Mai
-CurrentDateButton.November=November
-CurrentDateButton.October=Oktober
-CurrentDateButton.September=September
+CurrentDateAndDigitalClock.April=April
+CurrentDateAndDigitalClock.August=August
+CurrentDateAndDigitalClock.December=Dezember
+CurrentDateAndDigitalClock.February=Februar
+CurrentDateAndDigitalClock.January=Januar
+CurrentDateAndDigitalClock.July=Juli
+CurrentDateAndDigitalClock.June=Juni
+CurrentDateAndDigitalClock.March=Marz
+CurrentDateAndDigitalClock.May=Mai
+CurrentDateAndDigitalClock.November=November
+CurrentDateAndDigitalClock.October=Oktober
+CurrentDateAndDigitalClock.September=September
