--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Por favor seleccione uno alterna
 JSelectionCalendar.SorryThisNameAlreadyExists=Lo sentimos, este nombre ya existe
 JSelectionCalendar.YouhaveToSpecifyAName=Usted debe especificar un nombre
 
-CurrentDateButton.April=Abril
-CurrentDateButton.August=Agosto
-CurrentDateButton.December=Diciembre
-CurrentDateButton.February=Febrero
-CurrentDateButton.January=Enero
-CurrentDateButton.July=Julio
-CurrentDateButton.June=Junio
-CurrentDateButton.March=Marzo
-CurrentDateButton.May=Mayo
-CurrentDateButton.November=Noviembre
-CurrentDateButton.October=Octubre
-CurrentDateButton.September=Septiembre
+CurrentDateAndDigitalClock.April=Abril
+CurrentDateAndDigitalClock.August=Agosto
+CurrentDateAndDigitalClock.December=Diciembre
+CurrentDateAndDigitalClock.February=Febrero
+CurrentDateAndDigitalClock.January=Enero
+CurrentDateAndDigitalClock.July=Julio
+CurrentDateAndDigitalClock.June=Junio
+CurrentDateAndDigitalClock.March=Marzo
+CurrentDateAndDigitalClock.May=Mayo
+CurrentDateAndDigitalClock.November=Noviembre
+CurrentDateAndDigitalClock.October=Octubre
+CurrentDateAndDigitalClock.September=Septiembre
