--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Per favore scegli una alternativ
 JSelectionCalendar.SorryThisNameAlreadyExists=Spiacente, questo nome esiste già
 JSelectionCalendar.YouhaveToSpecifyAName=Devi specificare un nome
 
-CurrentDateButton.April=Aprile
-CurrentDateButton.August=Agosto
-CurrentDateButton.December=Dicembre
-CurrentDateButton.February=Febbraio
-CurrentDateButton.January=Gennaio
-CurrentDateButton.July=Luglio
-CurrentDateButton.June=Giugno
-CurrentDateButton.March=Marzo
-CurrentDateButton.May=Maggio
-CurrentDateButton.November=Novembre
-CurrentDateButton.October=Ottobre
-CurrentDateButton.September=Settembre
+CurrentDateAndDigitalClock.April=Aprile
+CurrentDateAndDigitalClock.August=Agosto
+CurrentDateAndDigitalClock.December=Dicembre
+CurrentDateAndDigitalClock.February=Febbraio
+CurrentDateAndDigitalClock.January=Gennaio
+CurrentDateAndDigitalClock.July=Luglio
+CurrentDateAndDigitalClock.June=Giugno
+CurrentDateAndDigitalClock.March=Marzo
+CurrentDateAndDigitalClock.May=Maggio
+CurrentDateAndDigitalClock.November=Novembre
+CurrentDateAndDigitalClock.October=Ottobre
+CurrentDateAndDigitalClock.September=Settembre
