--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_nl_TODO.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_nl_TODO.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Kies een alternatieve
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, deze naam bestaat al
 JSelectionCalendar.YouhaveToSpecifyAName=U moet een naam op te geven
 
-CurrentDateButton.April=April
-CurrentDateButton.August=Augustus
-CurrentDateButton.December=December
-CurrentDateButton.February=Februari
-CurrentDateButton.January=Januari
-CurrentDateButton.July=Juli
-CurrentDateButton.June=Juni
-CurrentDateButton.March=Maart
-CurrentDateButton.May=Mei
-CurrentDateButton.November=November
-CurrentDateButton.October=Oktober
-CurrentDateButton.September=September
+CurrentDateAndDigitalClock.April=April
+CurrentDateAndDigitalClock.August=Augustus
+CurrentDateAndDigitalClock.December=December
+CurrentDateAndDigitalClock.February=Februari
+CurrentDateAndDigitalClock.January=Januari
+CurrentDateAndDigitalClock.July=Juli
+CurrentDateAndDigitalClock.June=Juni
+CurrentDateAndDigitalClock.March=Maart
+CurrentDateAndDigitalClock.May=Mei
+CurrentDateAndDigitalClock.November=November
+CurrentDateAndDigitalClock.October=Oktober
+CurrentDateAndDigitalClock.September=September
