--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Please choose an alternative one
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, this name already exists
 JSelectionCalendar.YouhaveToSpecifyAName=You have to specify a name
 
-CurrentDateButton.January=January
-CurrentDateButton.February=February 
-CurrentDateButton.March=March
-CurrentDateButton.April=April
-CurrentDateButton.May=May
-CurrentDateButton.June=June 
-CurrentDateButton.July=July
-CurrentDateButton.August=August
-CurrentDateButton.September=September
-CurrentDateButton.October=October
-CurrentDateButton.November=November
-CurrentDateButton.December=December
+CurrentDateAndDigitalClock.January=January
+CurrentDateAndDigitalClock.February=February 
+CurrentDateAndDigitalClock.March=March
+CurrentDateAndDigitalClock.April=April
+CurrentDateAndDigitalClock.May=May
+CurrentDateAndDigitalClock.June=June 
+CurrentDateAndDigitalClock.July=July
+CurrentDateAndDigitalClock.August=August
+CurrentDateAndDigitalClock.September=September
+CurrentDateAndDigitalClock.October=October
+CurrentDateAndDigitalClock.November=November
+CurrentDateAndDigitalClock.December=December
