--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_el_TODO.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_el_TODO.properties
@@ -99,15 +99,15 @@ JSelectionCalendar.PleaseChooseAnAlternativeOne=Please choose an alternative one
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, this name already exists
 JSelectionCalendar.YouhaveToSpecifyAName=You have to specify a name
 
-CurrentDateButton.April=Aprilios
-CurrentDateButton.August=Avgoustos
-CurrentDateButton.December=Dekemvrios
-CurrentDateButton.February=Fevrouarios
-CurrentDateButton.January=Ianouarios
-CurrentDateButton.July=Ioulios
-CurrentDateButton.June=Iounios
-CurrentDateButton.March=Martios
-CurrentDateButton.May=Maios
-CurrentDateButton.November=Noemvrios
-CurrentDateButton.October=Oktovrios
-CurrentDateButton.September=Septemvrios
+CurrentDateAndDigitalClock.April=Aprilios
+CurrentDateAndDigitalClock.August=Avgoustos
+CurrentDateAndDigitalClock.December=Dekemvrios
+CurrentDateAndDigitalClock.February=Fevrouarios
+CurrentDateAndDigitalClock.January=Ianouarios
+CurrentDateAndDigitalClock.July=Ioulios
+CurrentDateAndDigitalClock.June=Iounios
+CurrentDateAndDigitalClock.March=Martios
+CurrentDateAndDigitalClock.May=Maios
+CurrentDateAndDigitalClock.November=Noemvrios
+CurrentDateAndDigitalClock.October=Oktovrios
+CurrentDateAndDigitalClock.September=Septemvrios
