updated with new configs of dm and dm mobile

--- a/agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties
@@ -1,15 +1,15 @@
-UICaller.exit=Exit
+UICaller.exit=Izlaz
 UICaller.abortAll=Abort All
-UICaller.switchTo=Switch to
-UICaller.deleteAll=Delete All
-UICaller.forcedCancellation=Forced Cancellation
-UICaller.universAALMainMenu=universAAL Main Menu
-UICaller.pendingMessages=Pending Messages
-UICaller.pendingDialogs=Pending Dialogs
-UICaller.sorryAborted=Sorry, the application aborted the dialog: 
-UICaller.noPendingMessages=There are no pending messages\!
-UICaller.mainMenu=Main Menu
-UICaller.date=Date
-UICaller.subject=Subject
+UICaller.switchTo=Prebaci na
+UICaller.deleteAll=Izbrisi sve
+UICaller.forcedCancellation=Prislilno otkazivanje
+UICaller.universAALMainMenu=universAAL Glavni menu
+UICaller.pendingMessages=Poruke na cekanju
+UICaller.pendingDialogs=Dijalozi na cekanju
+UICaller.sorryAborted=Nazalost, aplikacija je prekinula dialog: 
+UICaller.noPendingMessages=Nema poruka na cekanju\!
+UICaller.mainMenu=Glavni menu
+UICaller.date=Datum
+UICaller.subject=Subjekt
 UICaller.ok=OK
-UICaller.search=Search
+UICaller.search=Trazi
