--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
@@ -39,3 +39,17 @@ AgendaWebGUI.AddNewEvent=Prosthiki neou gegonotos
 AgendaWebGUI.GetEventList=Lipsi listas gegonoton
 AgendaWebGUI.EventEditor=Prosthiki neou gegonotos
 AgendaWebGUI.Delete=Diagrafi
+
+AgendaWebGUI.EventList.Events=
+AgendaWebGUI.EventList.Event=Gegonos
+AgendaWebGUI.EventList.BelongsToCalendar=
+AgendaWebGUI.EventList.Category=
+AgendaWebGUI.EventList.Description=
+AgendaWebGUI.EventList.Place=
+AgendaWebGUI.EventList.BeginTime=
+AgendaWebGUI.EventList.EndTime=
+AgendaWebGUI.EventList.Reminder=Ipenthimisi
+AgendaWebGUI.EventList.Message=Minima
+AgendaWebGUI.EventList.Start=
+AgendaWebGUI.EventList.RepeatTime=
+AgendaWebGUI.EventList.RepeatInterval=
