--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -36,6 +36,20 @@ AgendaWebGUI.Interval="Intervalo(min) ";
 AgendaWebGUI.Home=Inicio
 AgendaWebGUI.InfoAfterAddingEvent=Cierre la ventana para finalizar o pulse \"Añadir nuevo evento\" para continuar añadiendo eventos
 AgendaWebGUI.AddNewEvent=Añadir nuevo evento
-AgendaWebGUI.GetEventList= GetEventList!!!!
-AgendaWebGUI.EventEditor=Event Editor!!
-AgendaWebGUI.Delete=Delete!!!
+AgendaWebGUI.GetEventList= Obtener la lista de eventos
+AgendaWebGUI.EventEditor=Editor de Eventos
+AgendaWebGUI.Delete=Borrar
+
+AgendaWebGUI.EventList.Events=Eventos
+AgendaWebGUI.EventList.Event=Evento
+AgendaWebGUI.EventList.BelongsToCalendar=Pertenece al calendario
+AgendaWebGUI.EventList.Category=Categoria
+AgendaWebGUI.EventList.Description=Descripcion
+AgendaWebGUI.EventList.Place=Lugar
+AgendaWebGUI.EventList.BeginTime=Hora de inicio
+AgendaWebGUI.EventList.EndTime=Tiempo final
+AgendaWebGUI.EventList.Reminder=Recordatorio
+AgendaWebGUI.EventList.Message=Mensaje
+AgendaWebGUI.EventList.Start=Initio
+AgendaWebGUI.EventList.RepeatTime=Tiempo de repeticion
+AgendaWebGUI.EventList.RepeatInterval=Intervalo de repeticion
