--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
@@ -39,3 +39,17 @@ AgendaWebGUI.AddNewEvent=Add new event
 AgendaWebGUI.GetEventList=Get Event List
 AgendaWebGUI.EventEditor=Add new event
 AgendaWebGUI.Delete=Delete
+
+AgendaWebGUI.EventList.Events=Events
+AgendaWebGUI.EventList.Event=Event
+AgendaWebGUI.EventList.BelongsToCalendar=Belongs to calendar
+AgendaWebGUI.EventList.Category=Category
+AgendaWebGUI.EventList.Description=Description
+AgendaWebGUI.EventList.Place=Place
+AgendaWebGUI.EventList.BeginTime=Begin time
+AgendaWebGUI.EventList.EndTime=End time
+AgendaWebGUI.EventList.Reminder=Reminder
+AgendaWebGUI.EventList.Message=Message
+AgendaWebGUI.EventList.Start=Start
+AgendaWebGUI.EventList.RepeatTime=Repeat Time
+AgendaWebGUI.EventList.RepeatInterval=Repeat Interval
