--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
@@ -4,7 +4,7 @@ UIProvider.InvalidInputDate=Sfalma kata tin epeksergasia tis eisodou: H Eisagogi
 UIProvider.InvalidInputMissing=Sfalma kata tin epeksergasia tis eisodou: Veveothite oti ola ta ypoxreotika pedia einai simpliromena
 UIProvider.InvalidInputUnknown=Agnosto sfalma kata tin epeksergasia ths eisodou
 UIProvider.UnknownServiceError=Agnosto sfalma kata ti xrisi
-UIProvider.EventSucessfullyRemoved=To gegonos aferethike me epitixia
+UIProvider.EventSucessfullyRemoved=To gegonos aferethike me epitixia.
 UIProvider.ErrorRemovingEvent=Sfalma kata ti diafdikasia aferesis gegonotos
 
 AgendaWebGUI.SelectUser=Epilekste to xristi tou opoiou ta gegonota thelete na epeksergastite
@@ -33,8 +33,8 @@ AgendaWebGUI.InfoToSetReminder=<p>Oriste thn ora ipenthimisis kai to minima<br>A
 AgendaWebGUI.Message=Minima
 AgendaWebGUI.Submit=Ipovoli
 AgendaWebGUI.Interval=Diastima(lepta) 
-AgendaWebGUI.Home=Arxi
-AgendaWebGUI.InfoAfterAddingEvent=Kleiste to parathiro gia termatismo i \"Prosthiki neou Gegonotos\" gia na sinexisete tin pros8iki perissoteron gegonoton
+AgendaWebGUI.Home=Agenda Arxi
+AgendaWebGUI.InfoAfterAddingEvent=\"Prosthiki neou Gegonotos\" gia na sinexisete tin pros8iki perissoteron gegonoton
 AgendaWebGUI.AddNewEvent=Prosthiki neou gegonotos
 AgendaWebGUI.GetEventList=Lipsi listas gegonoton
 AgendaWebGUI.EventEditor=Prosthiki neou gegonotos
