--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
@@ -4,7 +4,7 @@ UIProvider.InvalidInputDate=Error processing the input: The introduced Date is n
 UIProvider.InvalidInputMissing=Error processing the input: Make sure all mandatory fields are filled
 UIProvider.InvalidInputUnknown=Unknown error processing the input
 UIProvider.UnknownServiceError=Unknown error in service
-UIProvider.EventSucessfullyRemoved=Event successfully removed
+UIProvider.EventSucessfullyRemoved=Event successfully removed.
 UIProvider.ErrorRemovingEvent=Error while removing event
 
 AgendaWebGUI.SelectUser=Select user whose events you want to edit 
@@ -33,8 +33,8 @@ AgendaWebGUI.InfoToSetReminder=<p>Set the reminder time and message<br>Leave mes
 AgendaWebGUI.Message=Message
 AgendaWebGUI.Submit=Submit
 AgendaWebGUI.Interval=Interval(min) 
-AgendaWebGUI.Home=Home
-AgendaWebGUI.InfoAfterAddingEvent=Close window to finish or \"Add new event\" to continue adding more events
+AgendaWebGUI.Home=Agenda Home
+AgendaWebGUI.InfoAfterAddingEvent=\"Add new event\" to continue adding more events
 AgendaWebGUI.AddNewEvent=Add new event
 AgendaWebGUI.GetEventList=Get Event List
 AgendaWebGUI.EventEditor=Add new event
