--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -4,7 +4,7 @@ UIProvider.InvalidInputDate=Error procesando los datos: La fecha introducida no 
 UIProvider.InvalidInputMissing=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
 UIProvider.InvalidInputUnknown=Error desconocido procesando los datos
 UIProvider.UnknownServiceError=Unknown error in service
-UIProvider.EventSucessfullyRemoved=Event successfully removed
+UIProvider.EventSucessfullyRemoved=Event successfully removed.
 UIProvider.ErrorRemovingEvent=Error while removing event
 
 AgendaWebGUI.SelectUser=Seleccione el usuario cuyos eventos que desea editar
@@ -33,8 +33,8 @@ AgendaWebGUI.InfoToSetReminder=Configure el mensaje y la fecha del recordatorio 
 AgendaWebGUI.Message=Mensaje
 AgendaWebGUI.Submit=Enviar
 AgendaWebGUI.Interval="Intervalo(min) ";
-AgendaWebGUI.Home=Inicio
-AgendaWebGUI.InfoAfterAddingEvent=Cierre la ventana para finalizar o pulse \"Añadir nuevo evento\" para continuar añadiendo eventos
+AgendaWebGUI.Home=Agenda Inicio
+AgendaWebGUI.InfoAfterAddingEvent=\"Añadir nuevo evento\" para continuar añadiendo eventos
 AgendaWebGUI.AddNewEvent=Añadir nuevo evento
 AgendaWebGUI.GetEventList= Obtener la lista de eventos
 AgendaWebGUI.EventEditor=Editor de Eventos
