de translations update

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_de.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_de.properties
@@ -8,22 +8,22 @@ DatePanel.StartDate=Startdatum
 DatePanel.time=Zeit
 DatePanel.Year=Jahr
 #button
-ReminderPanel.SetReminder=Stellen Erinnerung
+ReminderPanel.SetReminder=Erinnerung stellen
 
 ReminderPanel.Active=Aktiv
 ReminderPanel.Date=Datum
-ReminderPanel.Inactive=Inaktive
+ReminderPanel.Inactive=Inaktiv
 ReminderPanel.Reminder=Erinnerung
-ReminderPanel.ReminderInfo=Erinnerung Informationend
-ReminderPanel.Type=Typ
+ReminderPanel.ReminderInfo=Information über die Erinnerung
+ReminderPanel.Type=Art
 ReminderPanel.VisualAlarm=Visueller Alarm
 #buttons
-ReminderScreen.Button.SetReminder=Stellen Erinnerung
-ReminderScreen.Button.CancelReminder=Stornier Erinnerung 
+ReminderScreen.Button.SetReminder=Erinnerung stellen 
+ReminderScreen.Button.CancelReminder=Erinnerung stornieren 
 
-ReminderScreen.IntervalMins=Intervall  (Min.)
+ReminderScreen.IntervalMins=Intervall (Min.)
 ReminderScreen.Message=Nachricht
 ReminderScreen.Misc=Verschiedenes
-ReminderScreen.ReminderDate=Erinnerung datum
-ReminderScreen.ReminderType=Erinnerung Typ
-ReminderScreen.RepeatsTimes=wiederholen (mal)
+ReminderScreen.ReminderDate=Erinnerung Datum
+ReminderScreen.ReminderType=Erinnerung Art
+ReminderScreen.RepeatsTimes=Wiederholungen (mal)
