--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
@@ -1,103 +1,103 @@
-JCalendar.EventsStored=Veranstaltung (en) gespeichert:
+JCalendar.EventsStored=gespeicherte Termine:
 JCalendar.Breadcrumb.Home=Startbildschirm
-JCalendar.Fri=Fri
-JCalendar.Mon=Mon
-JCalendar.PleaseSelectADayToSeeMoreInfo=Bitte wahlen Sie ein Tag, um weitere Informationen siehe
-JCalendar.Sat=Sam
-JCalendar.Sun=Son
-JCalendar.Thu=Don
-JCalendar.Tue=Die
-JCalendar.Wed=Mit
+JCalendar.Fri=Fr
+JCalendar.Mon=Mo
+JCalendar.PleaseSelectADayToSeeMoreInfo=Bitte wählen Sie ein Tag, um weitere Informationen zu sehen
+JCalendar.Sat=Sa
+JCalendar.Sun=So
+JCalendar.Thu=Do
+JCalendar.Tue=Di
+JCalendar.Wed=Mi
 
 #buttons
-JCalendar.NextMonth=Nachsten Monat
-JCalendar.PreviousMonth=Vorheriger Monat
-JCalendar.Back=Zuruck
-JCalendar.Home=Startbildschirm
+JCalendar.NextMonth=Nächstes Monat
+JCalendar.PreviousMonth=Vorheriges Monat
+JCalendar.Back=Zurück
+JCalendar.Home=Startseite
 JCalendar.Search=Suche
-JEventInfo.Delete=Loschen
-JEventInfo.Back=Zuruck
-JEventInfo.Save=Sparen
-JEventInfo.Main=Main
+JEventInfo.Delete=Löschen
+JEventInfo.Back=Zurück
+JEventInfo.Save=Sichern
+JEventInfo.Main=Haupt
 JEventInfo.Edit=Bearbeiten
 
 JEventInfo.Breadcrumb.Home.EventInfo=Startbildschirm -> Informationen zur Veranstaltung
-JEventInfo.Breadcrumb.Home.EventList=Startbildschirm -> Event Liste
+JEventInfo.Breadcrumb.Home.EventList=Startbildschirm -> Liste der Veranstaltungen 
 JEventInfo.Breadcrumb.Home.SearchEvents=Startbildschirm -> Suche Veranstaltungen
 JEventInfo.Breadcrumb.Home.SearchEvents=Kalender Auswahl
-JEventInfo.AppointmentInfo=Termin-Informationen
+JEventInfo.AppointmentInfo=Termin Informationen
 JEventInfo.Calendar=Kalender
 JEventInfo.Description=Beschreibung
 JEventInfo.EndDate=Enddatum
-JEventInfo.EventType=Ereignistyp
-JEventInfo.Place=Platz
+JEventInfo.EventType=Veranstaltungsart
+JEventInfo.Place=Ort
 JEventInfo.Reminder=Erinnerung\!
-JEventInfo.RemoveThisEvent=Entfernen Sie diese Veranstaltung
+JEventInfo.RemoveThisEvent=Veranstaltung entfernen
 JEventInfo.StartDate=Startdatum
 
 #buttons
-JEventList.Add=Hinzufugen
-JEventList.Back=Zuruck
-JEventList.Next=Nachste
-JEventList.Main=Main
+JEventList.Add=Hinzufügen
+JEventList.Back=Zurück
+JEventList.Next=Nächste
+JEventList.Main=Haupt
 
-JEventList.Appointment=Ernennung
-JEventList.ClickForMoreInfo=Klicken Sie für weitere Infos
+JEventList.Appointment=Termin
+JEventList.ClickForMoreInfo=Klicken Sie für weitere Informationen
 JEventList.EndDate=Enddatum
 JEventList.Hour=Stunde
-JEventList.NoEventIsStoredForThisDate=Keine Termine fur diesen Tag gespeichert
-JEventList.NoScheduledAppointment=Keine geplanten Termin
-JEventList.Place=Platz
-JEventList.ScheduleAppointment=vereinbarten Termin
-JEventList.ScheduledAppointment=vereinbarten Termin
-JEventList.ScheduledAppointments=geplante Termine
+JEventList.NoEventIsStoredForThisDate=Keine Termine für diesen Tag gespeichert
+JEventList.NoScheduledAppointment=Keine vereinbarten Termine
+JEventList.Place=Ort
+JEventList.ScheduleAppointment=vereinbarte Termine
+JEventList.ScheduledAppointment=vereinbarter Termine
+JEventList.ScheduledAppointments=vereinbarte Termine
 JEventList.SearchResults=Suchergebnis
 JEventList.StartDay=Startdatum
 
 #buttons
 JSearchEvents.Search=Suche
-JSearchEvents.Home=Startbildschirm
+JSearchEvents.Home=Startseite
 JSearchEvents.No=Nein
 JSearchEvents.Yes=Ja
 
-JSearchEvents.AllYears=Alle Jahre
-JSearchEvents.MaximumNumberOfEvents=Maximale Anzahl von Ereignissen
+JSearchEvents.AllYears=Jedes Jahr
+JSearchEvents.MaximumNumberOfEvents=Maximale Anzahl von Veranstaltungen
 JSearchEvents.MiscOptions=Verschiedene Einstellungen
-JSearchEvents.PickAMonth=Wahlen Sie einen Monat
-JSearchEvents.PickAYear=Wahlen Sie einen Jahr
-JSearchEvents.RemiveThisEvent=Entfernen Sie diese Veranstaltung
+JSearchEvents.PickAMonth=Wählen Sie einen Monat
+JSearchEvents.PickAYear=Wählen Sie einen Jahr
+JSearchEvents.RemoveThisEvent=Veranstaltung entfernen
 JSearchEvents.SearchByCategory=Suche nach Kategorie
 JSearchEvents.SearchByDescription=Suche nach Beschreibung
 JSearchEvents.SearchForAppointments=Suche nach Terminen
-JSearchEvents.ShoWOnlyPresentAndFurureEvents=Zeige nur <p>gegenwartigen und zukunftigen Ereignisse:
+JSearchEvents.ShoWOnlyPresentAndFurureEvents=Zeige nur<p>gegenwärtige und zukünftige Ereignisse:
 
 #buttons
-JSelectionCalendar.SelectAll=Alle auswahlen
-JSelectionCalendar.SelectNone=Auswahlen Keine
-JSelectionCalendar.Add=Hinzufugen
-JSelectionCalendar.Delete=Loschen
-JSelectionCalendar.Next=Nachste
+JSelectionCalendar.SelectAll=Alle auswählen
+JSelectionCalendar.SelectNone=Keine auswählen
+JSelectionCalendar.Add=Hinzufügen
+JSelectionCalendar.Delete=Löschen
+JSelectionCalendar.Next=Nächste
 JSelectionCalendar.Exit=Ausgang
 JSelectionCalendar.Button.Set=Setzen
 JSelectionCalendar.Button.Cancel=Stornieren
 JSelectionCalendar.Button.Yes=Ja
 JSelectionCalendar.Button.No=Nein
 
-JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Hinzufugen, Entfernen und durchsuchen Sie Ihre Kalender
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=alle damit verbundenen Veranstaltungen werden auch entfernt werden!
+JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Hinzufügen, Entfernen und durchsuchen Sie Ihren Kalender
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=alle damit verbundenen Veranstaltungen werden auch entfernt!
 JSelectionCalendar.AlongWiththeCalendar=Zusammen mit dem Kalender
 JSelectionCalendar.AlongWiththeCalendars=Zusammen mit den Kalendern
-JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Sind Sie sicher, dass Sie diese Kalender zu entfernen? 
-JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Sind Sie sicher, dass Sie diesen Kalender zu entfernen?
-JSelectionCalendar.CalendarName=Kalender Name
-JSelectionCalendar.CalendarnameIsOK=Kalender Name ok
+JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Sind Sie sicher, dass Sie diese Kalender entfernen wollen? 
+JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Sind Sie sicher, dass Sie diesen Kalender entfernen wollen?
+JSelectionCalendar.CalendarName=Kalenderbezeichnug
+JSelectionCalendar.CalendarnameIsOK=stimmt die Kalenderbezeichnung
 JSelectionCalendar.Calendars=Kalender
-JSelectionCalendar.GiveANameForTheNewCalendar=Geben Sie einen Namen für den neuen Kalender
+JSelectionCalendar.GiveANameForTheNewCalendar=Benennen Sie den neuen Kalender
 JSelectionCalendar.ListOfCalendars=Liste der Kalender
-JSelectionCalendar.Name=Neuen Kalender
-JSelectionCalendar.PleaseChooseAnAlternativeOne=Bitte wahlen Sie eine Alternative ein
+JSelectionCalendar.Name=Neuer Kalender
+JSelectionCalendar.PleaseChooseAnAlternativeOne=Bitte wählen Sie eine anderen
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, dieser Name ist bereits vorhanden
-JSelectionCalendar.YouhaveToSpecifyAName=Sie mussen einen Namen angeben
+JSelectionCalendar.YouhaveToSpecifyAName=Sie müssen einen Namen angeben
 
 CurrentDateAndDigitalClock.April=April
 CurrentDateAndDigitalClock.August=August
@@ -106,7 +106,7 @@ CurrentDateAndDigitalClock.February=Februar
 CurrentDateAndDigitalClock.January=Januar
 CurrentDateAndDigitalClock.July=Juli
 CurrentDateAndDigitalClock.June=Juni
-CurrentDateAndDigitalClock.March=Marz
+CurrentDateAndDigitalClock.March=März
 CurrentDateAndDigitalClock.May=Mai
 CurrentDateAndDigitalClock.November=November
 CurrentDateAndDigitalClock.October=Oktober
