de translations update

--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_de.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_de.properties
@@ -1,13 +1,13 @@
 AgendaProvider.33=line1\nline2\nline3\nline4\nline5\nline6
-AgendaProvider.EnterSomeText=Geben Sie Text ein:
+AgendaProvider.EnterSomeText=Geben Sie einen Text ein:
 AgendaProvider.DoYouWantToBeRemindedAgain=Wollen Sie wieder erinnert werden?
-AgendaProvider.InvalidInput=Ungultige Eingabe \!
-AgendaProvider.InvalidUserInput=Ungultige Eingabe \!
-AgendaProvider.NoEventWithTheGivenIdWasFound=Keine Termine mit der angegebenen ID gefunden wurde\!
+AgendaProvider.InvalidInput=Ungültige Eingabe \!
+AgendaProvider.InvalidUserInput=Ungültige Benutzereingabe \!
+AgendaProvider.NoEventWithTheGivenIdWasFound=Keine Veranstaltung mit der angegebenen ID wurde gefunden\!
 AgendaProvider.Reminder=Erinnerung
-AgendaProvider.ReminderTriggered=Erinnerung ausgellöst
+AgendaProvider.ReminderTriggered=Erinnerung ausgelöst
 AgendaProvider.TheGivenCalendarAlreadyExists=Der angegebene Kalender existiert bereits\!
 AgendaProvider.TheGivenCalendarDoesNotExist=Der angegebene Kalender existiert nicht\!
-AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=Die angegebenen Kalender oder Veranstaltung existiert nicht oder es gibt keine Korrelation zwischen ihnen\!
-AgendaProvider.TheGivenEventCouldNotBeDeleted=Der angegebene Ereignis konnte nicht gelöscht werden\!
-AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=Sie mussen einen Besitzer für den Kalender
+AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=Der angegebene Kalender oder die Veranstaltung existiert nicht oder es gibt keine Verbindung zwischen ihnen\!
+AgendaProvider.TheGivenEventCouldNotBeDeleted=Die angegebene Veranstaltung konnte nicht gelöscht werden\!
+AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=Sie müssen einen Besitzer für den Kalender bekanntgeben
