--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/gui/wrapper/messages_de.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/gui/wrapper/messages_de.properties
@@ -1,3 +1,3 @@
 SimpleOutputPublisher.Reminder=Erinnerung...
-SimpleOutputPublisher.Snooze=Dosen
+SimpleOutputPublisher.Snooze=Schlummern
 SimpleOutputPublisher.TurnOff=Ausschalten
