initial screen changed to AP selection and externalize strings updated accordingly, rem msg made mandatory, comments and javadoc update, year dropdown reduced from 15 to 10

--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
@@ -9,7 +9,7 @@ UIProvider.ErrorRemovingEvent=Error while removing event
 
 AgendaWebGUI.SelectUser=Select user whose events you want to edit 
 AgendaWebGUI.NoUsersFound=No users found
-AgendaWebGUI.EditEvents=Edit events
+#AgendaWebGUI.EditEvents=Edit events
 AgendaWebGUI.User=User
 
 AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor  
@@ -37,7 +37,6 @@ AgendaWebGUI.Home=Agenda Home
 AgendaWebGUI.InfoAfterAddingEvent=\"Add new event\" to continue adding more events
 AgendaWebGUI.AddNewEvent=Add new event
 AgendaWebGUI.GetEventList=Get Event List
-AgendaWebGUI.EventEditor=Add new event
 AgendaWebGUI.Delete=Delete
 
 AgendaWebGUI.EventList.Events=Events
