--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_el-TODO.properties
@@ -9,7 +9,7 @@ UIProvider.ErrorRemovingEvent=Sfalma kata ti diafdikasia aferesis gegonotos
 
 AgendaWebGUI.SelectUser=Epilekste to xristi tou opoiou ta gegonota thelete na epeksergastite
 AgendaWebGUI.NoUsersFound=Den vrethikan xristes
-AgendaWebGUI.EditEvents=Epeksergasia gegonoton
+#AgendaWebGUI.EditEvents=Epeksergasia gegonoton
 AgendaWebGUI.User=Xristis
 
 AgendaWebGUI.AgendaScreenTitle=Sintaktis epeksergasias gegonoton 
@@ -37,7 +37,6 @@ AgendaWebGUI.Home=Agenda Arxi
 AgendaWebGUI.InfoAfterAddingEvent=\"Prosthiki neou Gegonotos\" gia na sinexisete tin pros8iki perissoteron gegonoton
 AgendaWebGUI.AddNewEvent=Prosthiki neou gegonotos
 AgendaWebGUI.GetEventList=Lipsi listas gegonoton
-AgendaWebGUI.EventEditor=Prosthiki neou gegonotos
 AgendaWebGUI.Delete=Diagrafi
 
 AgendaWebGUI.EventList.Events=
