--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -9,7 +9,7 @@ UIProvider.ErrorRemovingEvent=Error while removing event
 
 AgendaWebGUI.SelectUser=Seleccione el usuario cuyos eventos que desea editar
 AgendaWebGUI.NoUsersFound=No se encontraron usuarios
-AgendaWebGUI.EditEvents=Editar eventos
+#AgendaWebGUI.EditEvents=Editar eventos
 AgendaWebGUI.User=Usuario
 
 AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor
@@ -37,7 +37,6 @@ AgendaWebGUI.Home=Agenda Inicio
 AgendaWebGUI.InfoAfterAddingEvent=\"Añadir nuevo evento\" para continuar añadiendo eventos
 AgendaWebGUI.AddNewEvent=Añadir nuevo evento
 AgendaWebGUI.GetEventList= Obtener la lista de eventos
-AgendaWebGUI.EventEditor=Editor de Eventos
 AgendaWebGUI.Delete=Borrar
 
 AgendaWebGUI.EventList.Events=Eventos
