spanish translation updated according to comments from Gema

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -10,10 +10,10 @@ JCalendar.Tue=Mar
 JCalendar.Wed=Mie
 
 #buttons
-JCalendar.NextMonth=Mes Proximo
+JCalendar.NextMonth=Mes próximo
 JCalendar.PreviousMonth=Mes Anterior
 JCalendar.Back=Espalda
-JCalendar.Home=Pantalla inicial
+JCalendar.Home=Inicio
 JCalendar.Search=Buscar
 JEventInfo.Delete=Borrar
 JEventInfo.Back=Espalda
@@ -36,8 +36,8 @@ JEventInfo.RemoveThisEvent=Borre este evento
 JEventInfo.StartDate=Fecha de comienzo
 
 #buttons
-JEventList.Add=Anadir
-JEventList.Back=Espalda
+JEventList.Add=Añadir
+JEventList.Back=Volver
 JEventList.Next=Mes
 JEventList.Main=Principal
 
@@ -51,7 +51,7 @@ JEventList.Place=Lugar
 JEventList.ScheduleAppointment=cita programada 
 JEventList.ScheduledAppointment=cita programada
 JEventList.ScheduledAppointments=cita programada
-JEventList.SearchResults=Buscar Resultados
+JEventList.SearchResults=Resultados
 JEventList.StartDay=fecha comienzo
 
 #buttons
@@ -72,25 +72,25 @@ JSearchEvents.SearchForAppointments=Busque por citas
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Muestrar solo<p>los eventos actuales y futuros:
 
 #buttons
-JSelectionCalendar.SelectAll=Seleccionar todo
-JSelectionCalendar.SelectNone=seleccionar ninguno
-JSelectionCalendar.Add=Anadir
+JSelectionCalendar.SelectAll=Seleccionar todos
+JSelectionCalendar.SelectNone=Deseleccionar todos
+JSelectionCalendar.Add=Añadir
 JSelectionCalendar.Delete=Borrar
-JSelectionCalendar.Next=Mes
-JSelectionCalendar.Exit=Salida
-JSelectionCalendar.Button.Set=Establecer
+JSelectionCalendar.Next=Editar
+JSelectionCalendar.Exit=Salir
+JSelectionCalendar.Button.Set=Aceptar
 JSelectionCalendar.Button.Cancel=Cancelar
 JSelectionCalendar.Button.Yes=Si
 JSelectionCalendar.Button.No=No
 
-JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Añada, elimine y busque sus calendarios
+JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Gestión de calendarios
 JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminarán!
 JSelectionCalendar.AlongWiththeCalendar=Junto con el calendario
 JSelectionCalendar.AlongWiththeCalendars=Junto con los calendarios
-JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=¿Esta seguro que desea eliminar estos Calendarios? 
-JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=¿Esta seguro que desea eliminar este Calendario?
+JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Esta seguro que desea eliminar estos Calendarios? 
+JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Esta seguro que desea eliminar este Calendario?
 JSelectionCalendar.CalendarName=Nombre del Calendario
-JSelectionCalendar.CalendarnameIsOK=El Nombre del Calendario esta OK
+JSelectionCalendar.CalendarnameIsOK=El nombre del calendario es correcto
 JSelectionCalendar.Calendars=Calendarios
 JSelectionCalendar.GiveANameForTheNewCalendar=Ponga un nombre al nuevo calendario
 JSelectionCalendar.ListOfCalendars=Lista de Calendarios
