--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
@@ -8,7 +8,7 @@ DatePanel.StartDate=Fecha iniciación
 DatePanel.time=hora
 DatePanel.Year=año
 #button
-ReminderPanel.SetReminder=Establecer un Recordatorio
+ReminderPanel.SetReminder=Recordatorio
 
 ReminderPanel.Active=Activo
 ReminderPanel.Date=Fecha
@@ -18,12 +18,12 @@ ReminderPanel.ReminderInfo=Información del Recordatorio
 ReminderPanel.Type=Tipo
 ReminderPanel.VisualAlarm=Alarma Visual
 #buttons
-ReminderScreen.Button.SetReminder=Establecer un Recordatorio
-ReminderScreen.Button.CancelReminder=Eliminar un Recordatorio
+ReminderScreen.Button.SetReminder=Aceptar
+ReminderScreen.Button.CancelReminder=Cancelar
 
 ReminderScreen.IntervalMins=intervalo (minutos)
 ReminderScreen.Message=Mensaje
-ReminderScreen.Misc=Misc
+ReminderScreen.Misc=Periodicidad
 ReminderScreen.ReminderDate=Fecha del recordatorio
 ReminderScreen.ReminderType=Tipo del recordatorio
 ReminderScreen.RepeatsTimes=repetición (veces)
