spanish translation updated according to comments from Gema 2

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -14,7 +14,7 @@ JCalendar.NextMonth=Mes próximo
 JCalendar.PreviousMonth=Mes Anterior
 JCalendar.Back=Espalda
 JCalendar.Home=Inicio
-JCalendar.Search=Buscar
+JCalendar.Search=Búscar
 JEventInfo.Delete=Borrar
 JEventInfo.Back=Espalda
 JEventInfo.Save=Ahorrar
@@ -62,14 +62,14 @@ JSearchEvents.Yes=Si
 
 JSearchEvents.AllYears=Todos los años
 JSearchEvents.MaximumNumberOfEvents=Número máximo de eventos
-JSearchEvents.MiscOptions=Opciones Misc
+JSearchEvents.MiscOptions=Opciones:
 JSearchEvents.PickAMonth=Seleccione un mes
 JSearchEvents.PickAYear=Seleccione un año
 JSearchEvents.RemiveThisEvent=Elimine este evento
-JSearchEvents.SearchByCategory=Busque por categoría
-JSearchEvents.SearchByDescription=Busque por descripción
-JSearchEvents.SearchForAppointments=Busque por citas
-JSearchEvents.ShoWOnlyPresentAndFurureEvents=Muestrar solo<p>los eventos actuales y futuros:
+JSearchEvents.SearchByCategory=Búsqueda por categoría
+JSearchEvents.SearchByDescription=Búsqueda por descripción
+JSearchEvents.SearchForAppointments=Búsqueda de eventos
+JSearchEvents.ShoWOnlyPresentAndFurureEvents=Mostrar eventos<p>actuales y futuros:
 
 #buttons
 JSelectionCalendar.SelectAll=Seleccionar todos
