final spanish translation

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
@@ -1,10 +1,10 @@
 DatePanel.date=fecha
 DatePanel.Day=día
-DatePanel.EndDate=Fecha finalización
+DatePanel.EndDate=Fecha de finalización
 DatePanel.Hour=hora
 DatePanel.Mins=minutos
 DatePanel.Month=mes
-DatePanel.StartDate=Fecha iniciación
+DatePanel.StartDate=Fecha de inicio
 DatePanel.time=hora
 DatePanel.Year=año
 #button
