--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -1,5 +1,5 @@
 JCalendar.EventsStored=Evento(s) guardados:
-JCalendar.Breadcrumb.Home=Pantalla inicial
+JCalendar.Breadcrumb.Home=Inicio
 JCalendar.Fri=Vie
 JCalendar.Mon=Lun
 JCalendar.PleaseSelectADayToSeeMoreInfo=Por favor, seleccione un día para ver más información
@@ -10,22 +10,22 @@ JCalendar.Tue=Mar
 JCalendar.Wed=Mie
 
 #buttons
-JCalendar.NextMonth=Mes próximo
-JCalendar.PreviousMonth=Mes Anterior
-JCalendar.Back=Espalda
+JCalendar.NextMonth=Posterior
+JCalendar.PreviousMonth=Anterior
+JCalendar.Back=Volver
 JCalendar.Home=Inicio
 JCalendar.Search=Búscar
 JEventInfo.Delete=Borrar
-JEventInfo.Back=Espalda
-JEventInfo.Save=Ahorrar
-JEventInfo.Main=Principal
+JEventInfo.Back=Volver
+JEventInfo.Save=Aceptar
+JEventInfo.Main=Inicio
 JEventInfo.Edit=Editar
 
 JEventInfo.Breadcrumb.Home.EventInfo=Pantalla inicial -> Datos del evento
 JEventInfo.Breadcrumb.Home.EventList=Pantalla inicial -> Lista de eventos
-JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Buscar eventos
-JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de seleccion
-JEventInfo.AppointmentInfo=Información sobre citas
+JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Búscar eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de selección
+JEventInfo.AppointmentInfo=Información sobre eventos
 JEventInfo.Calendar=Calendario
 JEventInfo.Description=Descripción
 JEventInfo.EndDate=Fecha de finalización
@@ -33,13 +33,13 @@ JEventInfo.EventType=Tipo de evento
 JEventInfo.Place=Lugar
 JEventInfo.Reminder=Recordatorio\!
 JEventInfo.RemoveThisEvent=Borre este evento
-JEventInfo.StartDate=Fecha de comienzo
+JEventInfo.StartDate=Fecha de inicio
 
 #buttons
 JEventList.Add=Añadir
 JEventList.Back=Volver
-JEventList.Next=Mes
-JEventList.Main=Principal
+JEventList.Next=Siguiente
+JEventList.Main=Inicio
 
 JEventList.Appointment=Cita
 JEventList.ClickForMoreInfo=Pulse para obtener más información
@@ -48,19 +48,19 @@ JEventList.Hour=Hora
 JEventList.NoEventIsStoredForThisDate=No hay eventos guardados para esta fecha
 JEventList.NoScheduledAppointment=No hay ningúna cita programada
 JEventList.Place=Lugar
-JEventList.ScheduleAppointment=cita programada 
+JEventList.ScheduleAppointment=programar cita 
 JEventList.ScheduledAppointment=cita programada
-JEventList.ScheduledAppointments=cita programada
+JEventList.ScheduledAppointments=citas programadas
 JEventList.SearchResults=Resultados
-JEventList.StartDay=fecha comienzo
+JEventList.StartDay=fecha de inicio
 
 #buttons
-JSearchEvents.Search=Buscar
-JSearchEvents.Home=Pantalla inicial
+JSearchEvents.Search=Búscar
+JSearchEvents.Home=Initio
 JSearchEvents.No=No
 JSearchEvents.Yes=Si
 
-JSearchEvents.AllYears=Todos los años
+JSearchEvents.AllYears=Todos
 JSearchEvents.MaximumNumberOfEvents=Número máximo de eventos
 JSearchEvents.MiscOptions=Opciones:
 JSearchEvents.PickAMonth=Seleccione un mes
@@ -76,7 +76,7 @@ JSelectionCalendar.SelectAll=Seleccionar todos
 JSelectionCalendar.SelectNone=Deseleccionar todos
 JSelectionCalendar.Add=Añadir
 JSelectionCalendar.Delete=Borrar
-JSelectionCalendar.Next=Editar
+JSelectionCalendar.Next=Siguiente
 JSelectionCalendar.Exit=Salir
 JSelectionCalendar.Button.Set=Aceptar
 JSelectionCalendar.Button.Cancel=Cancelar
@@ -94,10 +94,10 @@ JSelectionCalendar.CalendarnameIsOK=El nombre del calendario es correcto
 JSelectionCalendar.Calendars=Calendarios
 JSelectionCalendar.GiveANameForTheNewCalendar=Ponga un nombre al nuevo calendario
 JSelectionCalendar.ListOfCalendars=Lista de Calendarios
-JSelectionCalendar.Name=Nuevo calendario
+JSelectionCalendar.Name=Nombre
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Por favor seleccione uno alternativo
 JSelectionCalendar.SorryThisNameAlreadyExists=Lo sentimos, este nombre ya existe
-JSelectionCalendar.YouhaveToSpecifyAName=Usted debe especificar un nombre
+JSelectionCalendar.YouhaveToSpecifyAName=Debe especificar un nombre
 
 CurrentDateAndDigitalClock.April=Abril
 CurrentDateAndDigitalClock.August=Agosto
