--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -14,16 +14,16 @@ JCalendar.NextMonth=Posterior
 JCalendar.PreviousMonth=Anterior
 JCalendar.Back=Volver
 JCalendar.Home=Inicio
-JCalendar.Search=Búscar
+JCalendar.Search=Buscar
 JEventInfo.Delete=Borrar
 JEventInfo.Back=Volver
 JEventInfo.Save=Aceptar
-JEventInfo.Main=Inicio
+JEventInfo.Main=Volver
 JEventInfo.Edit=Editar
 
 JEventInfo.Breadcrumb.Home.EventInfo=Pantalla inicial -> Datos del evento
 JEventInfo.Breadcrumb.Home.EventList=Pantalla inicial -> Lista de eventos
-JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Búscar eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Buscar eventos
 JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de selección
 JEventInfo.AppointmentInfo=Información sobre eventos
 JEventInfo.Calendar=Calendario
@@ -32,14 +32,14 @@ JEventInfo.EndDate=Fecha de finalización
 JEventInfo.EventType=Tipo de evento
 JEventInfo.Place=Lugar
 JEventInfo.Reminder=Recordatorio\!
-JEventInfo.RemoveThisEvent=Borre este evento
+JEventInfo.RemoveThisEvent=Borre el evento
 JEventInfo.StartDate=Fecha de inicio
 
 #buttons
 JEventList.Add=Añadir
 JEventList.Back=Volver
 JEventList.Next=Siguiente
-JEventList.Main=Inicio
+JEventList.Main=Volver
 
 JEventList.Appointment=Cita
 JEventList.ClickForMoreInfo=Pulse para obtener más información
@@ -55,10 +55,10 @@ JEventList.SearchResults=Resultados
 JEventList.StartDay=fecha de inicio
 
 #buttons
-JSearchEvents.Search=Búscar
-JSearchEvents.Home=Initio
+JSearchEvents.Search=Buscar
+JSearchEvents.Home=Inicio
 JSearchEvents.No=No
-JSearchEvents.Yes=Si
+JSearchEvents.Yes=Sí
 
 JSearchEvents.AllYears=Todos
 JSearchEvents.MaximumNumberOfEvents=Número máximo de eventos
@@ -72,8 +72,8 @@ JSearchEvents.SearchForAppointments=Búsqueda de eventos
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Mostrar eventos<p>actuales y futuros:
 
 #buttons
-JSelectionCalendar.SelectAll=Seleccionar todos
-JSelectionCalendar.SelectNone=Deseleccionar todos
+JSelectionCalendar.SelectAll=Seleccionar <p> todos
+JSelectionCalendar.SelectNone=Deseleccionar <p> todos
 JSelectionCalendar.Add=Añadir
 JSelectionCalendar.Delete=Borrar
 JSelectionCalendar.Next=Siguiente
@@ -87,12 +87,12 @@ JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Gestión de calendarios
 JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminarán!
 JSelectionCalendar.AlongWiththeCalendar=Junto con el calendario
 JSelectionCalendar.AlongWiththeCalendars=Junto con los calendarios
-JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Esta seguro que desea eliminar estos Calendarios? 
-JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Esta seguro que desea eliminar este Calendario?
+JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=¿Está seguro que desea eliminar los calendarios? 
+JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=¿Está seguro que desea eliminar el calendario?
 JSelectionCalendar.CalendarName=Nombre del Calendario
 JSelectionCalendar.CalendarnameIsOK=El nombre del calendario es correcto
 JSelectionCalendar.Calendars=Calendarios
-JSelectionCalendar.GiveANameForTheNewCalendar=Ponga un nombre al nuevo calendario
+JSelectionCalendar.GiveANameForTheNewCalendar=Ponga nombre al nuevo calendario
 JSelectionCalendar.ListOfCalendars=Lista de Calendarios
 JSelectionCalendar.Name=Nombre
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Por favor seleccione uno alternativo
