--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -1,20 +1,20 @@
 UIProvider.EventSuccessfullyAdded=Evento añadido correctamente
-UIProvider.ErrorAddingEvent=Error añadiendo evento
+UIProvider.ErrorAddingEvent=Ha ocurrido un error al intentar añadir el nuevo evento
 UIProvider.InvalidInputDate=Error procesando los datos: La fecha introducida no es válida
-UIProvider.InvalidInputMissing=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
-UIProvider.InvalidInputUnknown=Error desconocido procesando los datos
-UIProvider.UnknownServiceError=Unknown error in service
-UIProvider.EventSucessfullyRemoved=Event successfully removed.
-UIProvider.ErrorRemovingEvent=Error while removing event
+UIProvider.InvalidInputMissing=Asegúrese de que todos los campos obligatorios han sido introducidos
+UIProvider.InvalidInputUnknown=Error desconocido, por favor revise los datos introducidos
+UIProvider.UnknownServiceError=Error desconocido en el sistema
+UIProvider.EventSucessfullyRemoved=Evento eliminado correctamente.
+UIProvider.ErrorRemovingEvent=Ha ocurrido un error durante la eliminación del evento
 
-AgendaWebGUI.SelectUser=Seleccione el usuario cuyos eventos que desea editar
+AgendaWebGUI.SelectUser=Seleccione el usuario cuyos eventos desea editar
 AgendaWebGUI.NoUsersFound=No se encontraron usuarios
 #AgendaWebGUI.EditEvents=Editar eventos
 AgendaWebGUI.User=Usuario
 
-AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor
-AgendaWebGUI.SelectCalendar=Aqui puede añadir un nuevo evento para el usuario - Elija un calendario en el que guardar el evento
-AgendaWebGUI.NoCalendarsFound=¡No se han encontrado calendarios para el usuario!
+AgendaWebGUI.AgendaScreenTitle=Gestión de eventos
+AgendaWebGUI.SelectCalendar=Elija el calendario donde desea añadir el nuevo evento
+AgendaWebGUI.NoCalendarsFound=¡No se han encontrado calendarios para el usuario seleccionado!
 AgendaWebGUI.Calendar=Calendario
 AgendaWebGUI.Date=Fecha
 AgendaWebGUI.SelectDate=Elija una fecha para el evento - Tenga en cuenta que la fecha por defecto es mañana a esta hora
@@ -32,23 +32,23 @@ AgendaWebGUI.Reminder=Recordatorio
 AgendaWebGUI.InfoToSetReminder=Configure el mensaje y la fecha del recordatorio - Tenga en cuenta que la fecha por defecto es mañana 15 minutos antes del evento<br>Deje el mensaje en blanco para ignorarlo
 AgendaWebGUI.Message=Mensaje
 AgendaWebGUI.Submit=Enviar
-AgendaWebGUI.Interval="Intervalo(min) ";
-AgendaWebGUI.Home=Agenda Inicio
+AgendaWebGUI.Interval=Intervalo (min)
+AgendaWebGUI.Home=Inicio
 AgendaWebGUI.InfoAfterAddingEvent=\"Añadir nuevo evento\" para continuar añadiendo eventos
-AgendaWebGUI.AddNewEvent=Añadir nuevo evento
-AgendaWebGUI.GetEventList= Obtener la lista de eventos
+AgendaWebGUI.AddNewEvent=Nuevo
+AgendaWebGUI.GetEventList=Eventos
 AgendaWebGUI.Delete=Borrar
 
 AgendaWebGUI.EventList.Events=Eventos
 AgendaWebGUI.EventList.Event=Evento
 AgendaWebGUI.EventList.BelongsToCalendar=Pertenece al calendario
-AgendaWebGUI.EventList.Category=Categoria
-AgendaWebGUI.EventList.Description=Descripcion
+AgendaWebGUI.EventList.Category=Categoría
+AgendaWebGUI.EventList.Description=Descripción
 AgendaWebGUI.EventList.Place=Lugar
 AgendaWebGUI.EventList.BeginTime=Hora de inicio
-AgendaWebGUI.EventList.EndTime=Tiempo final
+AgendaWebGUI.EventList.EndTime=Hora de finalización
 AgendaWebGUI.EventList.Reminder=Recordatorio
 AgendaWebGUI.EventList.Message=Mensaje
-AgendaWebGUI.EventList.Start=Initio
-AgendaWebGUI.EventList.RepeatTime=Tiempo de repeticion
-AgendaWebGUI.EventList.RepeatInterval=Intervalo de repeticion
+AgendaWebGUI.EventList.Start=Inicio
+AgendaWebGUI.EventList.RepeatTime=Nº repeticiones
+AgendaWebGUI.EventList.RepeatInterval=Intervalo (min)
