--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_es.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_es.properties
@@ -1,13 +1,13 @@
 AgendaProvider.33=line1\nline2\nline3\nline4\nline5\nline6
 AgendaProvider.34=Introduzca el texto:
-AgendaProvider.DoYouWantToBeRemindedAgain=¿Desea que se lo recuerde otra vez?
-AgendaProvider.InvalidInput=Entrada invalida\!
-AgendaProvider.InvalidUserInput=Entrada invalida de usuario\!
-AgendaProvider.NoEventWithTheGivenIdWasFound=No se han encontrado eventos para ese id\!
+AgendaProvider.DoYouWantToBeRemindedAgain=¿Desea que se le recuerde de nuevo?
+AgendaProvider.InvalidInput=¡Entrada inválida\!
+AgendaProvider.InvalidUserInput=¡Entrada inválida de usuario\!
+AgendaProvider.NoEventWithTheGivenIdWasFound=¡No se han encontrado eventos para ese identificador\!
 AgendaProvider.Reminder=Recordatorio
 AgendaProvider.ReminderTriggered=Disparo del recordatorio
-AgendaProvider.TheGivenCalendarAlreadyExists=El calendario proporcionado ya existe\!
-AgendaProvider.TheGivenCalendarDoesNotExist=El calendario proporcionado no existe\!
-AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=El calendario o evento proporcionado no existe o no hay correlación con el evento\!
-AgendaProvider.TheGivenEventCouldNotBeDeleted=El evento proporcinoado no puede ser eliminado\!
-AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=Debe especificar un propietario del calendario
+AgendaProvider.TheGivenCalendarAlreadyExists=¡El calendario proporcionado ya existe\!
+AgendaProvider.TheGivenCalendarDoesNotExist=¡El calendario proporcionado no existe\!
+AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=!El calendario o evento no existen o no hay correlación entre ellos\!
+AgendaProvider.TheGivenEventCouldNotBeDeleted=¡El evento proporcionado no puede ser eliminado\!
+AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=Debe especificar un propietario para el calendario
