--- a/help_when_out/hwo.mobile/src/main/resources/org/universAAL/AALapplication/hwo/messages_es.properties
+++ b/help_when_out/hwo.mobile/src/main/resources/org/universAAL/AALapplication/hwo/messages_es.properties
@@ -17,3 +17,13 @@ HwOGUI.16 = Elegir destino
 HwOGUI.17 = Elegir destino
 HwOGUI.18 = Destinos
 HwOGUI.19 = Elegir
+HwOGUI.20 = Alert
+HwOGUI.21 = Yes
+HwOGUI.22 = No
+HwOGUI.23 = Out of safe area
+HwOGUI.24 = Stopped
+HwOGUI.25 = Wandering
+HwOGUI.26 = Out of safe area
+HwOGUI.27 = Stopped
+HwOGUI.28 = Wandering
+HwOGUI.29 = Panic button pressed
