--- a/agenda/agenda.runner/runner/configurations/ui.dm/messages.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.dm/messages.properties
@@ -44,7 +44,7 @@ UIPreferencesUICaller.UnknownServiceError=Unknown error after receiving user inp
 UIPreferencesDialogBuilder.UIPreferencesScreenTitle=UI Preferences Editor
 UIPreferencesDialogBuilder.UIPreferencesObtainmentError=UI Preferences could not be retrieved
 UIPreferencesDialogBuilder.GeneralInteractionPreferences=General preferences
-UIPreferencesDialogBuilder.SelectGeneralInteractionPreferences=Select general interaction preferences
+#UIPreferencesDialogBuilder.SelectGeneralInteractionPreferences=Select general interaction preferences
 UIPreferencesDialogBuilder.PreferredModalitySelect=Preferred modality
 UIPreferencesDialogBuilder.SecondaryModalitySelect=Secondary modality
 UIPreferencesDialogBuilder.PreferredLanguageSelect=Preferred language
@@ -57,10 +57,10 @@ UIPreferencesDialogBuilder.Modality.sms=Sms
 UIPreferencesDialogBuilder.Modality.mobile=Mobile
 UIPreferencesDialogBuilder.Modality.gesture=Gesture
 UIPreferencesDialogBuilder.ContentDensityType.overview=Overview
-UIPreferencesDialogBuilder.ContentDensityType.overview=Detailed
+UIPreferencesDialogBuilder.ContentDensityType.detailed=Detailed
 
 UIPreferencesDialogBuilder.SystemMenuPreferences=System menu preferences
-UIPreferencesDialogBuilder.SelectSystemMenuPreferences=Select system menu related preferences
+#UIPreferencesDialogBuilder.SelectSystemMenuPreferences=Select system menu related preferences
 UIPreferencesDialogBuilder.MainMenuConfSelect=Main menu configuration
 UIPreferencesDialogBuilder.UIRequestPersistenceSelect=Dialogues persistent
 UIPreferencesDialogBuilder.PendingDialogueBuilderSelect=Pending dialogues as
@@ -76,7 +76,7 @@ UIPreferencesDialogBuilder.Status.on=On
 UIPreferencesDialogBuilder.Status.off=Off
 
 UIPreferencesDialogBuilder.VisualPreferences=Visual preferences
-UIPreferencesDialogBuilder.SelectVisualPreferences=Select visual interaction preferences
+#UIPreferencesDialogBuilder.SelectVisualPreferences=Select visual interaction preferences
 UIPreferencesDialogBuilder.BackgroundColorSelect=Background color
 UIPreferencesDialogBuilder.FlashingResourcesSelect=Flashing
 UIPreferencesDialogBuilder.DayNightModeSelect=Day/Night mode
@@ -93,6 +93,7 @@ UIPreferencesDialogBuilder.FontSizeSelect=Font size
 UIPreferencesDialogBuilder.Size.small=Small
 UIPreferencesDialogBuilder.Size.medium=Medium
 UIPreferencesDialogBuilder.Size.large=Large
+UIPreferencesDialogBuilder.ComponentSpacingSelect=Component spacing
 UIPreferencesDialogBuilder.Intensity.low=Low
 UIPreferencesDialogBuilder.Intensity.medium=Medium
 UIPreferencesDialogBuilder.Intensity.high=High
@@ -121,7 +122,7 @@ UIPreferencesDialogBuilder.GenericFontFamily.fantasy=Fantasy
 UIPreferencesDialogBuilder.GenericFontFamily.monospace=Monospace
 
 UIPreferencesDialogBuilder.AuditoryPreferences=Auditory preferences
-UIPreferencesDialogBuilder.SelectAuditoryPreferences=Select auditory interaction preferences
+#UIPreferencesDialogBuilder.SelectAuditoryPreferences=Select auditory interaction preferences
 UIPreferencesDialogBuilder.SpeechRateSelect=Speech rate
 UIPreferencesDialogBuilder.VoiceGenderSelect=Voice gender
 UIPreferencesDialogBuilder.SystemSoundsSelect=System sounds
@@ -132,14 +133,14 @@ UIPreferencesDialogBuilder.VoiceGender.female=Female
 UIPreferencesDialogBuilder.VoiceGender.male=Male
 
 UIPreferencesDialogBuilder.AlertPreferences=Alert preferences
-UIPreferencesDialogBuilder.SelectAlertPreferences=Select alert preferences
+#UIPreferencesDialogBuilder.SelectAlertPreferences=Select alert preferences
 UIPreferencesDialogBuilder.AlertSelect=Alert type
 UIPreferencesDialogBuilder.AlertType.visualOnly=Visual only
 UIPreferencesDialogBuilder.AlertType.audioOnly=Audio only
-UIPreferencesDialogBuilder.AlertType.visualAndOnly=Visual and audio
+UIPreferencesDialogBuilder.AlertType.visualAndAudio=Visual and audio
 
 UIPreferencesDialogBuilder.AccessModePreferences=Access mode preferences
-UIPreferencesDialogBuilder.SelectAccessMode=Select access mode preferences
+#UIPreferencesDialogBuilder.SelectAccessMode=Select access mode preferences
 UIPreferencesDialogBuilder.AuditoryModeSelect=Auditory mode
 UIPreferencesDialogBuilder.OlfactoryModeSelect=Olfactory mode
 UIPreferencesDialogBuilder.VisualModeSelect=Visual mode
