--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -2,7 +2,7 @@ JCalendar.EventsStored=Evento(s) guardados:
 JCalendar.Breadcrumb.Home=Inicio
 JCalendar.Fri=Vie
 JCalendar.Mon=Lun
-JCalendar.PleaseSelectADayToSeeMoreInfo=Por favor, seleccione un día para ver más información
+JCalendar.PleaseSelectADayToSeeMoreInfo=Por favor, seleccione un dia para ver mas informacion
 JCalendar.Sat=Sab
 JCalendar.Sun=Dom
 JCalendar.Thu=Jue
@@ -24,29 +24,29 @@ JEventInfo.Edit=Editar
 JEventInfo.Breadcrumb.Home.EventInfo=Pantalla inicial -> Datos del evento
 JEventInfo.Breadcrumb.Home.EventList=Pantalla inicial -> Lista de eventos
 JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Buscar eventos
-JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de selección
-JEventInfo.AppointmentInfo=Información sobre eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de seleccion
+JEventInfo.AppointmentInfo=Informacion sobre eventos
 JEventInfo.Calendar=Calendario
-JEventInfo.Description=Descripción
-JEventInfo.EndDate=Fecha de finalización
+JEventInfo.Description=Descripcion
+JEventInfo.EndDate=Fecha de finalizacion
 JEventInfo.EventType=Tipo de evento
 JEventInfo.Place=Lugar
-JEventInfo.Reminder=Recordatorio\!
+JEventInfo.Reminder=\!Recordatorio\!
 JEventInfo.RemoveThisEvent=Borre el evento
 JEventInfo.StartDate=Fecha de inicio
 
 #buttons
-JEventList.Add=Añadir
+JEventList.Add=Anadir
 JEventList.Back=Volver
 JEventList.Next=Siguiente
 JEventList.Main=Volver
 
 JEventList.Appointment=Cita
-JEventList.ClickForMoreInfo=Pulse para obtener más información
-JEventList.EndDate=fecha de finalización
+JEventList.ClickForMoreInfo=Pulse para obtener mas informacion
+JEventList.EndDate=fecha de finalizacion
 JEventList.Hour=Hora
 JEventList.NoEventIsStoredForThisDate=No hay eventos guardados para esta fecha
-JEventList.NoScheduledAppointment=No hay ningúna cita programada
+JEventList.NoScheduledAppointment=No hay ninguna cita programada
 JEventList.Place=Lugar
 JEventList.ScheduleAppointment=programar cita 
 JEventList.ScheduledAppointment=cita programada
@@ -58,23 +58,23 @@ JEventList.StartDay=fecha de inicio
 JSearchEvents.Search=Buscar
 JSearchEvents.Home=Inicio
 JSearchEvents.No=No
-JSearchEvents.Yes=Sí
+JSearchEvents.Yes=Si
 
 JSearchEvents.AllYears=Todos
-JSearchEvents.MaximumNumberOfEvents=Número máximo de eventos
+JSearchEvents.MaximumNumberOfEvents=Numero maximo de eventos
 JSearchEvents.MiscOptions=Opciones:
 JSearchEvents.PickAMonth=Seleccione un mes
-JSearchEvents.PickAYear=Seleccione un año
+JSearchEvents.PickAYear=Seleccione un ano
 JSearchEvents.RemiveThisEvent=Elimine este evento
-JSearchEvents.SearchByCategory=Búsqueda por categoría
-JSearchEvents.SearchByDescription=Búsqueda por descripción
-JSearchEvents.SearchForAppointments=Búsqueda de eventos
+JSearchEvents.SearchByCategory=Busqueda por categoría
+JSearchEvents.SearchByDescription=Busqueda por descripcion
+JSearchEvents.SearchForAppointments=Busqueda de eventos
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Mostrar eventos<p>actuales y futuros:
 
 #buttons
 JSelectionCalendar.SelectAll=Seleccionar <p> todos
 JSelectionCalendar.SelectNone=Deseleccionar <p> todos
-JSelectionCalendar.Add=Añadir
+JSelectionCalendar.Add=Anadir
 JSelectionCalendar.Delete=Borrar
 JSelectionCalendar.Next=Siguiente
 JSelectionCalendar.Exit=Salir
@@ -83,12 +83,12 @@ JSelectionCalendar.Button.Cancel=Cancelar
 JSelectionCalendar.Button.Yes=Si
 JSelectionCalendar.Button.No=No
 
-JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Gestión de calendarios
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminarán!
+JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Gestion de calendarios
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminaran\!
 JSelectionCalendar.AlongWiththeCalendar=Junto con el calendario
 JSelectionCalendar.AlongWiththeCalendars=Junto con los calendarios
-JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=¿Está seguro que desea eliminar los calendarios? 
-JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=¿Está seguro que desea eliminar el calendario?
+JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=\¿Esta seguro que desea eliminar los calendarios\? 
+JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=\¿Esta seguro que desea eliminar el calendario\?
 JSelectionCalendar.CalendarName=Nombre del Calendario
 JSelectionCalendar.CalendarnameIsOK=El nombre del calendario es correcto
 JSelectionCalendar.Calendars=Calendarios
