minor changes in Spanish messages according to UTF8

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -31,7 +31,7 @@ JEventInfo.Description=Descripcion
 JEventInfo.EndDate=Fecha de finalizacion
 JEventInfo.EventType=Tipo de evento
 JEventInfo.Place=Lugar
-JEventInfo.Reminder=\!Recordatorio\!
+JEventInfo.Reminder=Recordatorio
 JEventInfo.RemoveThisEvent=Borre el evento
 JEventInfo.StartDate=Fecha de inicio
 
