--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -14,7 +14,7 @@ AgendaWebGUI.User=Usuario
 
 AgendaWebGUI.AgendaScreenTitle=Gestion de eventos
 AgendaWebGUI.SelectCalendar=Elija el calendario donde desea anadir el nuevo evento
-AgendaWebGUI.NoCalendarsFound=\¡No se han encontrado calendarios para el usuario seleccionado\!
+AgendaWebGUI.NoCalendarsFound=No se han encontrado calendarios para el usuario seleccionado
 AgendaWebGUI.Calendar=Calendario
 AgendaWebGUI.Date=Fecha
 AgendaWebGUI.SelectDate=Elija una fecha para el evento - Tenga en cuenta que la fecha por defecto es manana a esta hora
